2017-03-19  dyuret  <dyuret@ku.edu.tr>

	* TODO:
	# sfeatures is broken, fix it (lcnt,rcnt no longer parser fields).
	# implement, train, run model with sparse features.
	# implement, train, run model with dense features.

	* features:
	..sfeatures.jl defines:
	features(p::Parser, s::Sentence, feats::SFvec, rowval::Vector{Int}=Array(Int, length(feats)), idx=0)
	..features.jl defines:
	features(p::Parser, s::Sentence, feats::DFvec, x::AbstractArray=Array(wtype(s),flen(p,s,feats),1),xcol::Integer=1)

	SFvec:
	- gives Vector of Ints (i.e. sparse binary vector).
	- can represent words.
	- has compound features (i.e. ["s0w", "s0p"]).
	- no support for continuous values.

	DFvec:
	- gives Vector of Floats.
	- can represent word vecs and context vecs.
	- no support for compound features.
	- can represent small binary features (e.g. postags) in Float vector.

	What is wtype(s)? The float type of s.wvec.
	Why do we have flen?  Inf for sparse, vector length for dense feature representation.
	Why do we have xcol?
	Why do we have idx?
	How is sparse-features1 different from dense-features?
	Why do we need xsize, ysize?
	What are the different flist.jl entries? Strings is the new format, Ints is the old format.

2015-08-13  Deniz Yuret  <dyuret@ku.edu.tr>

	* Experiments:
	- foo0813bp1: nbeam=8 start=zn11beam4
	- foo0813bp2: nbeam=64 start=zn11beam4
	- foo0813bp3: nbeam=8 start=blank
	- foo0813bp4: nbeam=64 start=blank

	* gc.c: removing 16 from line 164 solved memory problem:
	#define REGION_PG_COUNT 8*4096 // 8G because virtual memory is cheap

	* train.jl: TODO: train gives different results with different
	numbers of workers.  make sure this is an instance ordering issue.
	echo '16*hpc3002' > foo.machine4; julia4 --machinefile foo.machine4 train.jl --usepmap --pbatch 25 --parser bparser --arctype ArcEager13 --feats zn11cpv --epochs 3 --lr 0.0001 --adagrad --nbeam 8 --in foo0730bp.net yatbazp.dev.jld4

2015-08-12  Deniz Yuret  <dyuret@ku.edu.tr>

	* RESULTS:
